Correct protocols.ini entry for Acer Keyboard protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@438 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -72,80 +72,79 @@
 #             be needed.
 #
 
-[Acer Keyboard]
-PID=01 11
-DevParms=Device:4=15,Sub Device:3=0
-DeviceTranslator=Translator(lsb,0,3,4) Translator(lsb,0,1,8,3) Translator(lsb,1,3,9)
-FixedData=8E EC
-CmdParms=OBC:7=0
-CmdTranslator=Translator(lsb,0,7) XorCheck(1,7,0,7)
-DefaultCmd=00
-Notes=
-# From John Fine's explanation of the decoder and protocol $01 11:
-# Includes my initial kludge version of decoding this protocol. The OBC
-#  and Hex are based on ideas described below
-#  
-#  ...
-#  
-#  Bits
-#  13 000 1111 110 110  (this was later changed to 0:3,D:5,S:3)
-#  07 Key
-#  01 Release flag
-#  01 Check bit
-#  03 110
-#  07 ~Key
-#  01 ~Release flag
-#  01 Check bit
-#  
-#  If we wanted a hand coded protocol, we would prefer to keep the
-#  variable data down to 8 bits. The Check bit is a pain to compute in
-#  S3C80 ASM code (though possible if necessary) and I think we can get
-#  away with doing little or nothing with the Release flag, so in my
-#  kludge decoder I made the OBC be just the 7 bit Key and I made the Hex
-#  command be the 7 bit key plus the 1 bit check, skipping the release flag.
-#   
-#  
-#  Call the 7 key bits tuvwxyz.
-#  Call the inverted 7 key bits TUVWXYZ.
-#  Remember a '1' is just gap, so we can add a '1' on the beginning
-#  without changing anything.
-#  
-#  Call the whole thing five 7-bit bytes (with an 8'th bit that won't be
-#  transmitted shown on the right of each).
-#  
-#  R03: 1000111#
-#  R04: 1110110#
-#  R05: tuvwxyzc
-#  R06: 0c110TU0
-#  R07: VWXYZ1c0
-#  
-#  If we come in with just R03,R04 (fixed) and R05 (variable) set as
-#  shown. I think the following code would set R06 and R07.
-#  
-#  W0 0 ; Enable easier access to R00..R07
-#  LD R06, 6 ; R06 = 00000110
-#  LD R07, R05 ; R07 = tuvwxyzc
-#  LDB R06.3, R07 ; R06 = 0000c110
-#  RR R07 ; R07 = ctuvwxyz
-#  ADD R07, R07 ; R07 = tuvwxyz0
-#  COM R07 ; R07 = TUVWXYZ1
-#  RLC R07 ; R07 = UVWXYZ1c
-#  RLC R06 ; R06 = 000c110T
-#  RLC R07 ; R07 = VWXYZ1c0
-#  RLC R06 ; R06 = 00c110TU
-#  RLC R06 ; R06 = 0c110TU0
-#  W0 C0 ; Restore normal easy access to RC0..RC7
-#  
-#  Then just increase fixed bytes from 2 to 4 and jump to the main engine.
-#  
-#  This assumes we can send just press commands and never release. If
-#  that's false we could call the IR engine (while key down) instead of
-#  jumping to it, then invert the release flag:
-#  XOR R06, C0
-#  XOR R07, 6
-#  and finally jump to the IR engine.
-#
-Code.S3C80= 43 89 21 8B 0F 87 80 40 07 07 00 00 01 90 00 D2 00 BE E8 48 31 00 6C 06 78 05 47 77 06 E0 07 02 77 60 07 10 07 10 06 10 07 10 06 10 06 31 C0 E6 10 04 8D 01 46
+[Acer Keyboard] 
+PID=01 11 
+DevParms=Device:4=15,Sub Device:3=3 
+DeviceTranslator=Translator(lsb,0,3,4) Translator(lsb,0,1,8,3) Translator(lsb,1,3,9) 
+FixedData=8E EC 
+CmdParms=OBC:7=0 
+CmdTranslator=Translator(lsb,0,7) XorCheck(1,7,0,7) 
+DefaultCmd=00 
+Notes= 
+# From John Fine's explanation of the decoder and protocol $01 11: 
+# Includes my initial kludge version of decoding this protocol. The OBC 
+# and Hex are based on ideas described below 
+# 
+# ... 
+# 
+# Bits 
+# 13 000 1111 110 110 (this was later changed to 0:3,D:5,S:3) 
+# 07 Key 
+# 01 Release flag 
+# 01 Check bit 
+# 03 110 
+# 07 ~Key 
+# 01 ~Release flag 
+# 01 Check bit 
+# 
+# If we wanted a hand coded protocol, we would prefer to keep the 
+# variable data down to 8 bits. The Check bit is a pain to compute in 
+# S3C80 ASM code (though possible if necessary) and I think we can get 
+# away with doing little or nothing with the Release flag, so in my 
+# kludge decoder I made the OBC be just the 7 bit Key and I made the Hex 
+# command be the 7 bit key plus the 1 bit check, skipping the release flag. 
+# 
+# 
+# Call the 7 key bits tuvwxyz. 
+# Call the inverted 7 key bits TUVWXYZ. 
+# Remember a '1' is just gap, so we can add a '1' on the beginning 
+# without changing anything. 
+# 
+# Call the whole thing five 7-bit bytes (with an 8'th bit that won't be 
+# transmitted shown on the right of each). 
+# 
+# R03: 1000111# 
+# R04: 1110110# 
+# R05: tuvwxyzc 
+# R06: 0c110TU0 
+# R07: VWXYZ1c0 
+# 
+# If we come in with just R03,R04 (fixed) and R05 (variable) set as 
+# shown. I think the following code would set R06 and R07. 
+# 
+# W0 0 ; Enable easier access to R00..R07 
+# LD R06, 6 ; R06 = 00000110 
+# LD R07, R05 ; R07 = tuvwxyzc 
+# LDB R06.3, R07 ; R06 = 0000c110 
+# RR R07 ; R07 = ctuvwxyz 
+# ADD R07, R07 ; R07 = tuvwxyz0 
+# COM R07 ; R07 = TUVWXYZ1 
+# RLC R07 ; R07 = UVWXYZ1c 
+# RLC R06 ; R06 = 000c110T 
+# RLC R07 ; R07 = VWXYZ1c0 
+# RLC R06 ; R06 = 00c110TU 
+# RLC R06 ; R06 = 0c110TU0 
+# W0 C0 ; Restore normal easy access to RC0..RC7 
+# 
+# Then just increase fixed bytes from 2 to 4 and jump to the main engine. 
+# 
+# This assumes we can send just press commands and never release. If 
+# that's false we could call the IR engine (while key down) instead of 
+# jumping to it, then invert the release flag: 
+# XOR R06, C0 
+# XOR R07, 6 
+# and finally jump to the IR engine. 
+Code.S3C80= 43 89 21 8B 0F 87 80 40 07 07 00 00 01 90 00 D2 00 BE 06 40 31 00 6C 06 78 05 47 77 06 E0 07 02 77 60 07 10 07 10 06 10 07 10 06 10 06 31 C0 E6 10 04 8D 01 46
 
 ######### Basic Example #######
 #                               Protocol name
@@ -1461,20 +1460,26 @@ Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 78 17 5A 02 AF 5D 3C 04
 Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
 Code.6805-RC16/18=10 27 12 20 15 87 81 10 08 04 00 D9 E1 00 D9 E1 49 27 00 00 00 CD 03 00 78 09 01 57 06 B6 5A A8 20 B7 5A 3C_66 CC 01 C4
 
-
-#[RC-5/5x Combo]
-#PID=00 73
-#CmdParms=Device:1|2|3|4,Unit,OBC=0
-#CmdTranslator=Translator(lsb,comp,0,5,0)
-#CmdParmInit=PickInitializer(0,N0,N1,N2,N3)
-#Notes=
-#DevParms=RC-5x dev1:5,RC-5x dev2=[-0]:5,RC-5x dev3:5=[-1],RC-5x dev4:5=[-2]
-#FixedData=00 00 00 00
-#DefaultCmd=1f 00
-#CmdIndex=1
-# Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
-# Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
-# Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
+#[RC-5/5x Combo] 
+#PID=00 73 
+#DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>63:bool=[1],RC5x Device 3:5=[2],Sub-Device>63:bool=[3],RC5x Device 4:5=[4],Sub-Device>63:bool=[5] 
+#DeviceImporter=RC5Importer() 
+#DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(7,1,25) Translator(comp,6,5,27) Rc5FlagTranslator() 
+#FixedData=00 00 00 00 
+#CmdParms=Type :RC5x|RC5,RC5x Device :0|2|4|6|RC5,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7 
+#CmdTranslator=Translator(comp,0,1,15,2) Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,15,2) Translator(comp,4,5,3) Translator(5,1,1,6) Translator(comp,5,6,8) 
+#CmdParmInit=RC5or5xInitializer() 
+#DefaultCmd=00 00 
+#CmdIndex=1 
+#Notes=This Protocol can do either RC5 or RC5x mostly used in McIntosh and Philips equipment. It can do all 128 OBC's for any device in RC5. \ 
+#In the Setup tab you can select any four devices in RC5x and pick between subdevices 0-63 or 64-127 by marking the checkbox by the respective device. In \ 
+#the functions tab you can select any of the four RC5x Devices in the RC5x Device column OR RC5. If you pick RC5x use the columns for RC5x \ 
+#Sub-Device and RC5x OBC. If you select RC5, then use the columns further right for RC5 Device and RC5 OBC. Note: Since the variable data \ 
+#mapping is different between RC5x and RC5, values will appear in RC5x columns\ 
+#as you enter data in the RC5 columns and vice-versa. Just ignore the ones you aren't using. 
+#Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49 
+#Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60 
+#Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
 
 [RC-6]
 PID=00 58
