Corrected protocols.ini entry for Dish Network protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@440 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -481,28 +481,28 @@ Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 1C 0B 93 01 0B 0B A6 
 Code.740=0c 18 11 80 0c e0 e2 00 15 08 05 02 ee 04 5b 06 4f a9 15 20 db 00 a2 d7 a0 06 22 44 a5 5d 85 54 a5 5e 85 5d a5 54 85 5e 4c 00 ff
 Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B 15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD 01 83 12 7C 19 7C CC 01 83
 
-[Dish Network]
-PID=00 02
-DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,3,0,2) Translator(lsb,1,5,3)
-CmdParms=OBC:6=0
-CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6)
-Notes=Standard SAT/0775 is Unit 0 / Device 0 \
-      \n\n\
-      Device, Unit and OBC are all incompatible with KM (version 7.34) \
-      They are compatible with DecodeIR.dll as Device.Unit:OBC \
-      EFC values are compatible with KM within the same model remote. \
-      EFC values are compatible across models of remote for the default unit \
-      number and in some cases for other unit numbers.
-FixedData=00
-Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \
-           73 00 00 00 C5 0B F2 8D 01 46
-Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
-             17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
-             B7 6F 33 5A 3C 59 CC 01 83
-Code.6805-RC16/18=0B 18 11 20 10 B5 45 07 08 01 62 A3 02 62 C4 02 \
-                  C4 00 06 62 03 CC 01 AF
-Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
+[Dish Network] 
+PID=00 02 
+DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0 
+DeviceTranslator=Translator(lsb,0,3,0,2,-1) Translator(lsb,1,5,3) 
+CmdParms=OBC:6=0 
+CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6,0,-1) 
+Notes=Standard SAT/0775 is Unit 0 / Device 0 \ 
+\n\n\ 
+Device, Unit and OBC are all incompatible with KM (version 7.34) \ 
+They are compatible with DecodeIR.dll as Device.Unit:OBC \ 
+EFC values are compatible with KM within the same model remote. \ 
+EFC values are compatible across models of remote for the default unit \ 
+number and in some cases for other unit numbers. 
+FixedData=00 
+Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \ 
+           73 00 00 00 C5 0B F2 8D 01 46 
+Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \ 
+             17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \ 
+             B7 6F 33 5A 3C 59 CC 01 83 
+Code.6805-RC16/18=0B 18 11 20 10 B5 45 07 08 01 62 A3 02 62 C4 02 \ 
+                  C4 00 06 62 03 CC 01 AF 
+Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \ 
          17 08 EC 44 5D 4C 00 FF
 
 [Dish Network]
