More updates to the Dish Network protocols.  Thanks Jon Armstrong
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@444 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -508,8 +508,8 @@ Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
 [Dish Network]
 PID=00 02
 VariantName=2
-DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,5,8)
+DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0
+DeviceTranslator=Translator(lsb,0,5,0,0,-1) Translator(lsb,1,5,8)
 CmdParms=OBC:6=0
 CmdTranslator=Translator(0,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0 \
@@ -529,11 +529,11 @@ Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
 [Dish Network]
 PID=00 02
 VariantName=5
-DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,5,8)  Translator(lsb,1,5,16) \
-                 Translator(lsb,1,5,24)  Translator(lsb,1,5,32)
-CmdParms=OBC:6=0
-CmdTranslator=Translator(0,6)
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Remote Address (1 to 32) :5=1
+DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,0,0,-1)
+CmdParms=Device:0|1|2|,OBC:6=0
+CmdParmInit=PickInitializer(0,0,1,n2)
+CmdTranslator=Translator(1,6) Translator(0,2,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0\
       \n\n\
       Device, Unit and OBC are all incompatible with KM (version 7.34) \
@@ -545,7 +545,7 @@ FixedData=00 00 00 00 00
 Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
-           21 04 29 04 8D 01 46
+           21 04 29 04 8D 01 46[/quote]
 
 [Echostar 2200]
 PID=01 82
