Fix protocol entry Dish Network:5 Add RC-5/5x Combo (the "ugly" version), thanks Jon Armstrong Added RECS90 (90) protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@448 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -72,78 +72,78 @@
 #             be needed.
 #
 
-[Acer Keyboard] 
-PID=01 11 
-DevParms=Device:4=15,Sub Device:3=3 
-DeviceTranslator=Translator(lsb,0,3,4) Translator(lsb,0,1,8,3) Translator(lsb,1,3,9) 
-FixedData=8E EC 
-CmdParms=OBC:7=0 
-CmdTranslator=Translator(lsb,0,7) XorCheck(1,7,0,7) 
-DefaultCmd=00 
-Notes= 
-# From John Fine's explanation of the decoder and protocol $01 11: 
-# Includes my initial kludge version of decoding this protocol. The OBC 
-# and Hex are based on ideas described below 
-# 
-# ... 
-# 
-# Bits 
-# 13 000 1111 110 110 (this was later changed to 0:3,D:5,S:3) 
-# 07 Key 
-# 01 Release flag 
-# 01 Check bit 
-# 03 110 
-# 07 ~Key 
-# 01 ~Release flag 
-# 01 Check bit 
-# 
-# If we wanted a hand coded protocol, we would prefer to keep the 
-# variable data down to 8 bits. The Check bit is a pain to compute in 
-# S3C80 ASM code (though possible if necessary) and I think we can get 
-# away with doing little or nothing with the Release flag, so in my 
-# kludge decoder I made the OBC be just the 7 bit Key and I made the Hex 
-# command be the 7 bit key plus the 1 bit check, skipping the release flag. 
-# 
-# 
-# Call the 7 key bits tuvwxyz. 
-# Call the inverted 7 key bits TUVWXYZ. 
-# Remember a '1' is just gap, so we can add a '1' on the beginning 
-# without changing anything. 
-# 
-# Call the whole thing five 7-bit bytes (with an 8'th bit that won't be 
-# transmitted shown on the right of each). 
-# 
-# R03: 1000111# 
-# R04: 1110110# 
-# R05: tuvwxyzc 
-# R06: 0c110TU0 
-# R07: VWXYZ1c0 
-# 
-# If we come in with just R03,R04 (fixed) and R05 (variable) set as 
-# shown. I think the following code would set R06 and R07. 
-# 
-# W0 0 ; Enable easier access to R00..R07 
-# LD R06, 6 ; R06 = 00000110 
-# LD R07, R05 ; R07 = tuvwxyzc 
-# LDB R06.3, R07 ; R06 = 0000c110 
-# RR R07 ; R07 = ctuvwxyz 
-# ADD R07, R07 ; R07 = tuvwxyz0 
-# COM R07 ; R07 = TUVWXYZ1 
-# RLC R07 ; R07 = UVWXYZ1c 
-# RLC R06 ; R06 = 000c110T 
-# RLC R07 ; R07 = VWXYZ1c0 
-# RLC R06 ; R06 = 00c110TU 
-# RLC R06 ; R06 = 0c110TU0 
-# W0 C0 ; Restore normal easy access to RC0..RC7 
-# 
-# Then just increase fixed bytes from 2 to 4 and jump to the main engine. 
-# 
-# This assumes we can send just press commands and never release. If 
-# that's false we could call the IR engine (while key down) instead of 
-# jumping to it, then invert the release flag: 
-# XOR R06, C0 
-# XOR R07, 6 
-# and finally jump to the IR engine. 
+[Acer Keyboard]
+PID=01 11
+DevParms=Device:4=15,Sub Device:3=3
+DeviceTranslator=Translator(lsb,0,3,4) Translator(lsb,0,1,8,3) Translator(lsb,1,3,9)
+FixedData=8E EC
+CmdParms=OBC:7=0
+CmdTranslator=Translator(lsb,0,7) XorCheck(1,7,0,7)
+DefaultCmd=00
+Notes=
+# From John Fine's explanation of the decoder and protocol $01 11:
+# Includes my initial kludge version of decoding this protocol. The OBC
+# and Hex are based on ideas described below
+#
+# ...
+#
+# Bits
+# 13 000 1111 110 110 (this was later changed to 0:3,D:5,S:3)
+# 07 Key
+# 01 Release flag
+# 01 Check bit
+# 03 110
+# 07 ~Key
+# 01 ~Release flag
+# 01 Check bit
+#
+# If we wanted a hand coded protocol, we would prefer to keep the
+# variable data down to 8 bits. The Check bit is a pain to compute in
+# S3C80 ASM code (though possible if necessary) and I think we can get
+# away with doing little or nothing with the Release flag, so in my
+# kludge decoder I made the OBC be just the 7 bit Key and I made the Hex
+# command be the 7 bit key plus the 1 bit check, skipping the release flag.
+#
+#
+# Call the 7 key bits tuvwxyz.
+# Call the inverted 7 key bits TUVWXYZ.
+# Remember a '1' is just gap, so we can add a '1' on the beginning
+# without changing anything.
+#
+# Call the whole thing five 7-bit bytes (with an 8'th bit that won't be
+# transmitted shown on the right of each).
+#
+# R03: 1000111#
+# R04: 1110110#
+# R05: tuvwxyzc
+# R06: 0c110TU0
+# R07: VWXYZ1c0
+#
+# If we come in with just R03,R04 (fixed) and R05 (variable) set as
+# shown. I think the following code would set R06 and R07.
+#
+# W0 0 ; Enable easier access to R00..R07
+# LD R06, 6 ; R06 = 00000110
+# LD R07, R05 ; R07 = tuvwxyzc
+# LDB R06.3, R07 ; R06 = 0000c110
+# RR R07 ; R07 = ctuvwxyz
+# ADD R07, R07 ; R07 = tuvwxyz0
+# COM R07 ; R07 = TUVWXYZ1
+# RLC R07 ; R07 = UVWXYZ1c
+# RLC R06 ; R06 = 000c110T
+# RLC R07 ; R07 = VWXYZ1c0
+# RLC R06 ; R06 = 00c110TU
+# RLC R06 ; R06 = 0c110TU0
+# W0 C0 ; Restore normal easy access to RC0..RC7
+#
+# Then just increase fixed bytes from 2 to 4 and jump to the main engine.
+#
+# This assumes we can send just press commands and never release. If
+# that's false we could call the IR engine (while key down) instead of
+# jumping to it, then invert the release flag:
+# XOR R06, C0
+# XOR R07, 6
+# and finally jump to the IR engine.
 Code.S3C80= 43 89 21 8B 0F 87 80 40 07 07 00 00 01 90 00 D2 00 BE 06 40 31 00 6C 06 78 05 47 77 06 E0 07 02 77 60 07 10 07 10 06 10 07 10 06 10 06 31 C0 E6 10 04 8D 01 46
 
 ######### Basic Example #######
@@ -481,28 +481,28 @@ Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 1C 0B 93 01 0B 0B A6 
 Code.740=0c 18 11 80 0c e0 e2 00 15 08 05 02 ee 04 5b 06 4f a9 15 20 db 00 a2 d7 a0 06 22 44 a5 5d 85 54 a5 5e 85 5d a5 54 85 5e 4c 00 ff
 Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B 15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD 01 83 12 7C 19 7C CC 01 83
 
-[Dish Network] 
-PID=00 02 
-DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0 
-DeviceTranslator=Translator(lsb,0,3,0,2,-1) Translator(lsb,1,5,3) 
-CmdParms=OBC:6=0 
-CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6,0,-1) 
-Notes=Standard SAT/0775 is Unit 0 / Device 0 \ 
-\n\n\ 
-Device, Unit and OBC are all incompatible with KM (version 7.34) \ 
-They are compatible with DecodeIR.dll as Device.Unit:OBC \ 
-EFC values are compatible with KM within the same model remote. \ 
-EFC values are compatible across models of remote for the default unit \ 
-number and in some cases for other unit numbers. 
-FixedData=00 
-Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \ 
-           73 00 00 00 C5 0B F2 8D 01 46 
-Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \ 
-             17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \ 
-             B7 6F 33 5A 3C 59 CC 01 83 
-Code.6805-RC16/18=0B 18 11 20 10 B5 45 07 08 01 62 A3 02 62 C4 02 \ 
-                  C4 00 06 62 03 CC 01 AF 
-Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \ 
+[Dish Network]
+PID=00 02
+DevParms=Remote Address (1 to 32) :5=1,Device Code:5=0
+DeviceTranslator=Translator(lsb,0,3,0,2,-1) Translator(lsb,1,5,3)
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6,0,-1)
+Notes=Standard SAT/0775 is Unit 0 / Device 0 \
+\n\n\
+Device, Unit and OBC are all incompatible with KM (version 7.34) \
+They are compatible with DecodeIR.dll as Device.Unit:OBC \
+EFC values are compatible with KM within the same model remote. \
+EFC values are compatible across models of remote for the default unit \
+number and in some cases for other unit numbers.
+FixedData=00
+Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \
+           73 00 00 00 C5 0B F2 8D 01 46
+Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
+             17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
+             B7 6F 33 5A 3C 59 CC 01 83
+Code.6805-RC16/18=0B 18 11 20 10 B5 45 07 08 01 62 A3 02 62 C4 02 \
+                  C4 00 06 62 03 CC 01 AF
+Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
          17 08 EC 44 5D 4C 00 FF
 
 [Dish Network]
@@ -545,7 +545,7 @@ FixedData=00 00 00 00 00
 Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            73 0B F2 00 C5 0B F2 05 02 08 03 37 00 0C E6 22 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
-           21 04 29 04 8D 01 46[/quote]
+           21 04 29 04 8D 01 46
 
 [Echostar 2200]
 PID=01 82
@@ -852,6 +852,7 @@ DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
 FixedData=ff 00 ff 00 00 00
 CmdTranslator=Translator(lsb,0,8,0) Translator(lsb,comp,1,8,8)
 CmdParms=Device:0|1,OBC=0
+CmdParmInit=PickInitializer(0,N0,N2)
 DefaultCmd=00 00
 CmdIndex=1
 Notes=38.1 kHz
@@ -1460,26 +1461,25 @@ Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 78 17 5A 02 AF 5D 3C 04
 Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
 Code.6805-RC16/18=10 27 12 20 15 87 81 10 08 04 00 D9 E1 00 D9 E1 49 27 00 00 00 CD 03 00 78 09 01 57 06 B6 5A A8 20 B7 5A 3C_66 CC 01 C4
 
-#[RC-5/5x Combo] 
-#PID=00 73 
-#DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>63:bool=[1],RC5x Device 3:5=[2],Sub-Device>63:bool=[3],RC5x Device 4:5=[4],Sub-Device>63:bool=[5] 
-#DeviceImporter=RC5Importer() 
-#DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(7,1,25) Translator(comp,6,5,27) Rc5FlagTranslator() 
-#FixedData=00 00 00 00 
-#CmdParms=Type :RC5x|RC5,RC5x Device :0|2|4|6|RC5,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7 
-#CmdTranslator=Translator(comp,0,1,15,2) Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,15,2) Translator(comp,4,5,3) Translator(5,1,1,6) Translator(comp,5,6,8) 
-#CmdParmInit=RC5or5xInitializer() 
-#DefaultCmd=00 00 
-#CmdIndex=1 
-#Notes=This Protocol can do either RC5 or RC5x mostly used in McIntosh and Philips equipment. It can do all 128 OBC's for any device in RC5. \ 
-#In the Setup tab you can select any four devices in RC5x and pick between subdevices 0-63 or 64-127 by marking the checkbox by the respective device. In \ 
-#the functions tab you can select any of the four RC5x Devices in the RC5x Device column OR RC5. If you pick RC5x use the columns for RC5x \ 
-#Sub-Device and RC5x OBC. If you select RC5, then use the columns further right for RC5 Device and RC5 OBC. Note: Since the variable data \ 
-#mapping is different between RC5x and RC5, values will appear in RC5x columns\ 
-#as you enter data in the RC5 columns and vice-versa. Just ignore the ones you aren't using. 
-#Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49 
-#Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60 
-#Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
+[RC-5/5x Combo]
+PID=00 73
+DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>63:bool=[1],RC5x Device 3:5=[2],Sub-Device>63:bool=[3],RC5x Device 4:5=[4],Sub-Device>63:bool=[5]
+DeviceImporter=RC5Importer()
+DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(7,1,25) Translator(comp,6,5,27) Rc5FlagTranslator()
+FixedData=00 00 00 00
+CmdParms=Type :RC5x|RC5,RC5x Device :0|2|4|6,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7
+CmdTranslator=Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,12,6) Translator(comp,0,1,15,2) Translator(comp,4,5,3) Translator(5,1,1,6) Translator(comp,5,6,8)
+CmdParmInit=PickInitializer(1,n0,n2,n4,n6,,)
+DefaultCmd=00 00
+CmdIndex=1
+Notes=This Protocol can do either RC5 or RC5x mostly used in McIntosh and Philips equipment. It can do all 128 OBC's for any device in RC5. \n\n\
+In the Setup tab you can select any four devices in RC5x and pick between subdevices 0-63 or 64-127 by marking the checkbox by the respective device.\n\n\
+In the functions tab you select the signal type (RC-5 or RC-5x), then you must use the appropriate columns for that type.  For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device and RC5x OBC.\nFor the RC-5 type, use columns further right for RC5 Device and RC5 OBC.\n\nNote: Since the variable data \
+mapping is different between RC5x and RC5, values will appear in RC5x columns \
+as you enter data in the RC5 columns and vice-versa. Just ignore the ones you aren't using.
+Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
+Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
+Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
 
 [RC-6]
 PID=00 58
@@ -1655,6 +1655,26 @@ Code.S3C80=46 A6 11 8B 0F C5 C1 40 05 06 00 5A 0A CF 00 5A 10 72 0E 0A 76 00 01 
 Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 B0 17 5A 02 CF 5D 4C 00 FF
 Code.6805-C9=10 1D 11 20 0C E0 E1 00 06 05 06 08 2A 0B D7 51 8E 01 57 02 1C 5A CC 01 83
 Code.6805-RC16/18=12 2A 11 20 0C C5 41 05 06 05 27 77 08 27 48 87 0F 01 57 02 1C 5A CC 01 AF
+
+[RECS80 (90)]
+PID=00 90
+DevParms=Device:3=0,Timing=0:bool
+DeviceTranslator=Translator(0,3,2,comp) Translator(1,1,7)
+FixedData=00
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6,comp)
+DefaultCmd=FC
+Notes=Fixed data bottom bit=0 (unchecked)\
+\n\n\
+{0k,msb}<20,-5028|20,-7552>(T:2,D:3,F:6),^121.5m)+\
+\n\n\
+Fixed data bottom bit=1 (checked)\
+\n\n\
+{0k,msb}<20,-3546|20,-5316>(T:2,D:3,F:6),^89m)+.
+Code.S3C80= 00 00 11 8B 18 C5 41 05 06 00 06 09 BF 00 06 0E AB EC 40 00 06 06 DB 00 06 0A 4F AC AA 76 03 01 6B 0A 1C 0A 87 21 1D 97 21 13 1A F8 08 00 E0 C0 E0 C0 60 C0 56 C0 C0 56 03 3F 44 C0 03 8D 01 46
+Code.740= 00 00 11 80 12 E0 A2 41 04 05 06 07 7E 0A C8 76 2A 05 88 07 D5 56 5F 17 5D 09 A2 06 B5 72 95 6C CA D0 F9 A5 5A 6A 6A 6A 29 C0 05 5D 85 5D 4C 00 FF
+Code.6805-C9= 00 00 11 20 12 E0 E0 40 07 05 06 07 72 0A B9 30 42 05 81 07 CE 24 24 01 5A 09 AE 06 E6 6F E7 69 5A 26 F9 B6 57 46 46 46 A4 C0 BA 5A B7 5A CD 01 83 CD 01 92 3F 53 A6 05 B7 52 0F 50 11 00 5A 07 A6 D9 4A 26 FD 26 00 A6 03 AE 4A CD 01 9F 38 50 3A 52 26 E6 00 53 0B 10 53 A6 06 B7 52 CD 01 95 20 D8 CC 01 89
+Code.6805-RC16/18= 00 00 11 20 14 C5 41 05 06 04 02 EA 07 02 60 76 2A 03 02 78 05 02 32 56 5F 01 5A 09 AE 07 E6 72 E7 6A 5A 2A F9 B6 57 46 46 46 43 A4 C0 BA 5A B7 5A CC 01 B2
 
 [ReplayTV (Simple)]
 PID=00 40
@@ -2039,18 +2059,18 @@ Code.S3C80=38 87 01 8B 11 05 05 04 07 B9 07 A5 02 3C 0D 21 00 00 17 2B 07 A5 E4 
 Code.740=0A 17 01 80 12 8C 80 08 A0 00 05 06 1D 09 AD 00 00 00 00 00 00 04 30 A5 5D 85 5F 0A 85 5D A5 5A 85 5E 82 5E E6 5C 80 07 A5 5F 85 5E 3C 06 77 22 00 A9 E3 20 DB 00 20 DB 00 A2 D7 A0 03 22 44 22 06 90 E5 60
 Code.6805-C9=0A 17 01 20 12 8C 80 08 A0 00 05 05 FF 09 89 04 33 DF 06 20 02 04 30 B6 5A B7 5C 48 B7 5A B6 57 49 49 49 49 B7 5B 3C 59 20 08 B6 5C B7 5B A6 06 B7 74 CD 01 83 A6 DF CD 00 B7 CD 00 B7 A6 04 AE 83 CD 01 9F CD 01 8C 24 E1 81
 Code.6805-RC16/18=0E 23 01 20 0F 05 05 04 33 DC DC 16 1D 9B 00 00 00 B3 95 DD B6 5A B7 5C 43 48 B7 5D 38 5A B6 57 49 49 49 49 B7 5B 3C_66 CD 01 AF 10_7C 14_7C 12_66 12 58 3C_67 3C_68 CC 01 B2
-[Zenith] 
-PID=00 22 
-CmdTranslator=ZenithCmdTranslator() TranslatorFromDev(comp,2,1,0) 
-CmdParms=OBC=0 
-DevParms=Device (Signal Length):3=6,Long RECORD:bool,Sub-Device (Style):0|1 
-DeviceTranslator=ZenithTranslator() Translator(1,1,0) 
-Notes=The signal length in bits is decoded in IR as "Device" and the lead in style \ 
-as "Sub-Device". Sub-Device (Style) 1 aka "double-start" is usually used in TV's, the rest use 0 aka "single start". 
-FixedData=06 
-Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA 09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 46 
-Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF 3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6 
-Code.6805-C9=07 1C 11 0F 5A 09 CD 01 AD 25 04 AE 15 20 02 AE 01 1F 5A BF 53 B6 5A B7 52 3F 51 3C 51 B6 5B B7 50 33 50 A6 14 CD 00 B7 0E 50 25 A6 07 AE 8B CD 01 9F 33 50 3A 51 26 EB A6 02 B7 51 38 50 3A 52 26 E1 A6 98 AE C6 CD 01 9E 3A 53 26 C8 CC 01 89 A6 A1 4A 26 FD A6 15 CD 00 B7 A6 06 AE 4E CD 01 9F 20 CF 
+[Zenith]
+PID=00 22
+CmdTranslator=ZenithCmdTranslator() TranslatorFromDev(comp,2,1,0)
+CmdParms=OBC=0
+DevParms=Device (Signal Length):3=6,Long RECORD:bool,Sub-Device (Style):0|1
+DeviceTranslator=ZenithTranslator() Translator(1,1,0)
+Notes=The signal length in bits is decoded in IR as "Device" and the lead in style \
+as "Sub-Device". Sub-Device (Style) 1 aka "double-start" is usually used in TV's, the rest use 0 aka "single start".
+FixedData=06
+Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA 09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 46
+Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF 3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6
+Code.6805-C9=07 1C 11 0F 5A 09 CD 01 AD 25 04 AE 15 20 02 AE 01 1F 5A BF 53 B6 5A B7 52 3F 51 3C 51 B6 5B B7 50 33 50 A6 14 CD 00 B7 0E 50 25 A6 07 AE 8B CD 01 9F 33 50 3A 51 26 EB A6 02 B7 51 38 50 3A 52 26 E1 A6 98 AE C6 CD 01 9E 3A 53 26 C8 CC 01 89 A6 A1 4A 26 FD A6 15 CD 00 B7 A6 06 AE 4E CD 01 9F 20 CF
 Code.6805-RC16/18=0C 26 11 20 0F C5 01 08 00 00 7C 7D 04 7C FB AF C8 04 7C 01 0F 5A 0B 1F 5A CD 01 A1 25 04 A6 15 B7_80 B6 5A 48 4A 97 A0 08 24 04 BF_67 20 02 B7_68 A6 08 B7 50 B6 5B 97 53 48 39 5B 39 5A 58 39 5B 39 5A 3A 50 26 F2 38 5B 39 5A 3C D6 AE 03 E6_70 E7 B9 5A 26 F9 CC 01 AF
 
 # [pid: 00 01]
