Added Dish Network Combo protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@450 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -547,6 +547,61 @@ Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 \
            02 E6 0E 43 E6 0F 8B F6 01 55 18 08 56 C1 03 87 \
            21 04 29 04 8D 01 46
 
+[Dish Network Combo] 
+PID=01 E2 
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Remote Address (1 to 32) :5=0 
+DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,0,0,-1) 
+CmdParms=Device:0|1|2|,OBC:6=0 
+CmdParmInit=PickInitializer(0,0,1,n2) 
+CmdTranslator=Translator(1,6) Translator(0,2,6) 
+Notes=This protocol has a minimum of 5 repeats in macros that significantly  improves recognition accuracy in some models.\ 
+    This is the protocol to use for the PVR 721 and 921 and certain others that need a different device number for certain commands.\  
+    Here are the known commands for all Dish/Dishplayers:\n\n\ 
+      device=0 OBC=00   Info\n\ 
+      device=0 OBC=01   Discrete On in some models\n\ 
+      device=0 OBC=02   Power\n\ 
+      device=0 OBC=04   1\n\ 
+      device=0 OBC=05   2\n\ 
+      device=0 OBC=06   3\n\ 
+      device=0 OBC=08   4\n\ 
+      device=0 OBC=09   5\n\ 
+      device=0 OBC=10   6\n\ 
+      device=0 OBC=11   Menu\n\ 
+      device=0 OBC=12   7\n\ 
+      device=0 OBC=13   8\n\ 
+      device=0 OBC=14   9\n\ 
+      device=0 OBC=16   Select\n\ 
+      device=0 OBC=17   0\n\ 
+      device=0 OBC=18   Cancel\n\ 
+      device=0 OBC=20   Guide\n\ 
+      device=0 OBC=22   View\n\ 
+      device=0 OBC=23   TV/VCR or SD/HD\n\ 
+      device=0 OBC=24   Right/Browse\n\ 
+      device=0 OBC=26   Up\n\ 
+      device=0 OBC=27   Recall\n\ 
+      device=0 OBC=28   Left/Theme\n\ 
+      device=0 OBC=30   Down\n\ 
+      device=0 OBC=31   Record\n\ 
+      device=0 OBC=32   Pause\n\ 
+      device=0 OBC=33   Stop\n\ 
+      device=0 OBC=36   System Info\n\ 
+      device=0 OBC=37   * (Asterisk)\n\ 
+      device=0 OBC=38   # (Search)\n\ 
+      device=0 OBC=39   Discrete Off in some models\n\ 
+      device=1 OBC=03   Play/Back\n\ 
+      device=1 OBC=07   Page Down\n\ 
+      device=1 OBC=15   Page Up\n\ 
+      device=1 OBC=49   REW\n\ 
+      device=1 OBC=50   FFWD\n\ 
+      device=1 OBC=54   Skip Ahead\n\ 
+      device=1 OBC=55   Skip/Menu\n\ 
+      device=1 OBC=57   PVR/PTV 
+FixedData=00 00 00 00 00 
+Code.S3C80=2B 5C 51 8B 16 B6 59 05 06 00 C5 03 32 00 C5 05 73 0B F2 00 C5 0B F2 05 02 43 8C 18  08 56 C1 03 87 21 04 29 04 8D 01 46 
+Code.740=06 0D 51 80 10 B8 70 17 05 06 03 18 04 97 06 9C 17 08 F0 01 05 E6 5C 44 5D A5 62 29 03 AA B5 5E 85 5E 20 00 FF 3C 62 7F 4C 00 FF 
+Code.6805-C9=06 0E 51 20 11 B8 F0 00 17 05 06 03 19 04 9A 07 01 17 08 F4 01 05 3C 59 33 5A B6 5F A4 03 97 E6 5B B7 5B AD 04 A6 E2 B7 7C CC 01 83 
+Code.6805-RC16/18=0B 18 51 20 12 B6 59 05 06 01 62 A4 02 62 C4 06 03 00 06 62 04 05 02 B6 5F A4 03 97 E6 5B B7 5B CC 01 AF
+
 [Echostar 2200]
 PID=01 82
 CmdTranslator=Translator(comp)
