- Add AlternatePID entries for Sony Combo protocols - Make sub-device default to complement of device for NEC Combo protocols
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@457 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -869,7 +869,7 @@ PID=01 40
 DevParms=Device Code=184,NEC2:bool
 DeviceTranslator=Translator(lsb,comp,0,8,8) Translator(1,1,7)
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
-CmdParms=Sub Device=0,OBC=0
+CmdParms=Sub Device=[-0],OBC=0
 CmdIndex=1
 Notes=Combines all subdevice for one device of either NEC1 or NEC2 \
       \n\n\
@@ -888,7 +888,7 @@ PID=00 B6
 DevParms=Device Code=184
 DeviceTranslator=Translator(lsb,comp)
 FixedData=00
-CmdParms=Sub Device=0,OBC=0
+CmdParms=Sub Device=[-0],OBC=0
 CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
 CmdIndex=1
 DefaultCmd=1d 00
@@ -1484,7 +1484,7 @@ DeviceImporter=RC5Importer()
 DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) \
                  Rc5FlagTranslator()
 FixedData=1f 1f 1f
-CmdParms=     Device     :0|1|2=0,OBC:7=0
+CmdParms=     Device     :0|1|2,OBC:7
 #CmdTranslator=Translator(comp,1,6) Rc5Translator()
 CmdTranslator=Rc5Translator()
 DefaultCmd=fc
@@ -1934,6 +1934,7 @@ Code.6805-RC16/18=0F 23 31 20 12 F6 15 05 07 10 2B 96 00 95 96 2B F2 00 20 57 96
 [Sony Combo (12/20)]
 OldNames=Sony Combo (old)
 PID=00 27
+AlternatePID=0127,old,none
 VariantName=old
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
@@ -1951,6 +1952,7 @@ Code.6805-RC16/18=0F 23 22 20 13 F6 15 05 07 10 2B 96 00 95 96 2B \
 [Sony Combo (12/15/20)]
 OldNames=Sony Combo,Sony Combo (new)
 PID=00 27
+AlternatePID=0127,none
 VariantName=new
 CmdParms=Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0,OBC=0
 CmdTranslator= SonyComboTranslator() Translator(lsb,3,7)
