--- a/protocols.ini
+++ b/protocols.ini
@@ -1479,23 +1479,23 @@ Code.6805-RC16/18=11 24 11 20 14 C5 45 08 08 00 84 85 01 84 8E 3D D1 00 84 3D 1F
 
 [RC-5]
 PID=00 E8
-DevParms=Device 1:5=0,OBC>63=1:bool,Device 2:5=[0],OBC>63:bool=[1],Device 3:5=[2],OBC>63:bool=[3]
+DevParms=Device 1:5=0,OBC>63=0:bool,Device 2:5=[0],OBC>63:bool=[1],Device 3:5=[2],OBC>63:bool=[3]
 DeviceImporter=RC5Importer()
 DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) \
-                 Rc5FlagTranslator()
+Rc5FlagTranslator()
 FixedData=1f 1f 1f
-CmdParms=     Device     :0|1|2,OBC:7
+CmdParms= Device :0|1|2,OBC:7
 #CmdTranslator=Translator(comp,1,6) Rc5Translator()
 CmdTranslator=Rc5Translator()
 DefaultCmd=fc
 CmdParmInit=RC5Initializer()
 Notes=This combo supports half of the possible OBC range for each of up to \
-      three device numbers.  To support the whole OBC range for one device \
-      number requires using two of the three Device number positions for that \
-      one device number. \
-      \n\n\
-      For each Device number position, leave the check box blank to support \
-      OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127.
+three device numbers. To support the whole OBC range for one device \
+number requires using two of the three Device number positions for that \
+one device number. \
+\n\n\
+For each Device number position, leave the check box blank to support \
+OBCs from 0 to 63 or mark the check box to support OBCs from 64 to 127.
 Code.S3C80=40 9A 31 8B 0F C5 81 10 08 06 01 C2 01 A4 01 C2 01 A4 DE 2C 08 06 56 C0 03 09 01 76 00 01 6B 09 87 10 03 B6 C1 20 97 10 03 8D 01 46
 Code.740=0F 19 31 80 0C E0 81 21 20 08 06 02 06 02 05 6F 20 A5 60 29 03 AA B5 5D 17 5A 02 09 20 85 5D 4C 00 FF
 Code.6805-C9=0E 1B 31 20 0C E0 C1 20 20 08 06 02 14 02 0B 72 44 B6 5D A4 03 97 E6 5A B7 5A 01 57 02 1A 5A CC 01 83
@@ -1503,8 +1503,8 @@ Code.6805-RC16/18=10 28 31 20 0D C5 81 10 08 06 00 E0 DC 00 E0 DC 6F 20 B6 5D A4
 
 [RC-5x]
 PID=00 F2
-DevParms=Device Code:5=16,Sub Dev<63=1:bool
-DeviceTranslator=Translator(comp,0,5,3) Translator(comp,1,1,1)
+DevParms=Device Code:5=16,Sub Dev>63=0:bool
+DeviceTranslator=Translator(comp,0,5,3) Translator(1,1,1)
 FixedData=0f
 CmdTranslator=TranslatorFromDev(comp,1,1,1) Translator(comp,0,6) Translator(comp,1,6,6)
 CmdParms= Sub Device:7=0,OBC:6=0
@@ -1522,20 +1522,20 @@ DevParms=RC5x Device 1:5=0,Sub-Device>63=0:bool,RC5x Device 2:5=[0],Sub-Device>6
 DeviceImporter=RC5Importer()
 DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) Translator(7,1,25) Translator(comp,6,5,27) Rc5FlagTranslator()
 FixedData=00 00 00 00
-CmdParms=Type :RC5x|RC5,RC5x Device :0|2|4|6,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7
-CmdTranslator=Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,12,6) Translator(comp,0,1,15,2) Translator(comp,4,5,3) Translator(5,1,1,6) Translator(comp,5,6,8)
+CmdParms=Type :RC5x|RC5=1,RC5x Device :0|2|4|6,RC5x Sub-Device:7=127,RC5x OBC:6=63,RC5 Device:5,RC5 OBC:7=127
+CmdTranslator=Translator(comp,2,6,0) Translator(comp,3,6,6) Translator(1,2,13) Translator(comp,1,1,12,6) Translator(comp,0,1,15) Translator(comp,4,5,3) \
+Translator(5,1,1,6) Translator(comp,5,6,8) Translator(comp,2,1,11,6)
 CmdParmInit=PickInitializer(1,n0,n2,n4,n6,,)
 DefaultCmd=00 00
 CmdIndex=1
 Notes=This Protocol can do either RC5 or RC5x mostly used in McIntosh and Philips equipment. It can do all 128 OBC's for any device in RC5. \n\n\
 In the Setup tab you can select any four devices in RC5x and pick between subdevices 0-63 or 64-127 by marking the checkbox by the respective device.\n\n\
-In the functions tab you select the signal type (RC-5 or RC-5x), then you must use the appropriate columns for that type.  For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device and RC5x OBC.\nFor the RC-5 type, use columns further right for RC5 Device and RC5 OBC.\n\nNote: Since the variable data \
+In the functions tab you select the signal type (RC-5 or RC-5x), then you must use the appropriate columns for that type. For the RC-5x type, you can select any of the four RC5x Devices in the RC5x Device column, and enter the RC5x Sub-Device and RC5x OBC.\nFor the RC-5 type, use columns further right for RC5 Device and RC5 OBC.\n\nNote: Since the variable data \
 mapping is different between RC5x and RC5, values will appear in RC5x columns \
 as you enter data in the RC5 columns and vice-versa. Just ignore the ones you aren't using.
 Code.S3C80=40 9A 42 8B 17 C8 81 10 00 08 01 C2 01 A4 01 C2 01 A4 DE 2C 00 00 06 C2 94 01 06 00 28 08 37 21 18 E4 07 03 E4 08 04 E6 10 00 28 03 76 00 01 6B 45 B6 C2 20 29 03 8D 01 49 E6 25 09 E6 24 04 E6 28 89 E6 12 08 E4 22 1C E4 23 1D 28 08 37 22 08 37 24 0D E4 06 03 8B 0B 37 24 08 E4 05 03 8B 03 E4 04 03 E4 07 04 E4 08 05 76 00 01 6B 03 B6 03 20 77 77 E6 10 01 8D 01 49
 Code.740=0C 1C 42 80 11 E9 C0 20 20 08 08 02 07 02 06 02 C9 6F 20 00 00 04 17 62 38 3C 01 69 A5 62 4A 29 03 AA B5 5D 85 5D A5 61 85 5E A5 62 85 5F 17 5A 06 A5 5D 49 20 85 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 22 06 90 EC 60 3C 06 6C 3C E1 7E 3C 81 7F 3C 21 80 3C 01 69 A5 73 85 71 A5 74 85 72 A5 62 85 5E A5 61 17 5A 02 49 20 85 5D 4C 00 FF 60
 Code.6805-RC16/18=10 27 42 20 15 87 81 10 08 04 00 DE E1 00 DE E1 4A 0A 6E F9 00 00 03 00 84 09 01 5F 22 B6 5F 44 A4 03 97 E6 5A B7 5A 01 57 04 A8 20 B7 5A 3F 58 B6 5E B7 5B B6 5F B7 5C A6 02 B7_66 CC 01 C4 A6 06 B7_68 B6 5E B7 5A B6 5F B7 5B A6 01 B7_66 A6 C5 B7_7B B6_71 B7_6F B6_72 B7_70 01 57 06 B6 5A A8 20 B7 5A CC 01 B2
-
 [RC-6]
 PID=00 58
 CmdTranslator=Translator()
